Fix T45833: Light group instances are not rendered in the 3D viewport

The issue was introduced in c9ac51e by trying to use original's objects layers
for light visibility check instead of using duplicator's layers.